# degenprime-wrap

./: .gitignore  Makefile  README.md
.devcontainer/: Dockerfile  devcontainer.json
browser/: index.html  package.json  webpack.config.js
browser/src/: degenprime.js
python/: pyproject.toml
python/src/degenprime/: __main__.py  wasm.py
