[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"degenprime.libexec" = ["degenprime.wasm"]

[project]
name = "degenprime"
version = "0.1.1"
dependencies = [
    "wasmtime",
]
authors = [
  { name="Steven Blanchard", email="sgblanch@charlotte.edu" },
]
description = "Wrapper for degenprime"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
degenprime = "degenprime.wasm:degenprime"

[project.urls]
Homepage = "https://github.com/raw-lab/DeGenPrime"
Issues = "https://github.com/raw-lab/DeGenPrime/issues"
